# MeaningWorks

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Caddyfile  Dockerfile  LICENSE  README.md  __init__.py  docker-compose.prod.yml  docker-compose.yml  litestream.yml  pyproject.toml
adapters/: __init__.py  agent_system.py  api.py  process.py  software.py
agents/: __init__.py  base.py  spec_agents.py  swarm.py
api/: __init__.py  main.py  models.py
bots/: __init__.py
cli/: __init__.py  main.py  viewport.py
codegen/: __init__.py  comparison.py  generator.py  templates.py
core/: __init__.py  adapter_registry.py  agent_emission.py  agent_orchestrator.py  blueprint_editor.py  blueprint_health.py  blueprint_protocol.py  build_loop.py  cache.py  classification.py  compilation_modes.py  compilation_tree.py  consistency_checker.py  context_synthesis.py  convergence.py  determinism.py  dialectic.py  digest.py  dimension_extractor.py  dimensional.py  domain_adapter.py  engine.py  error_catalog.py  exceptions.py  exploration_synthesis.py  governor_validation.py  input_enrichment.py  input_quality.py  interface_extractor.py  interface_schema.py  interrogation.py  llm.py  materialization.py  naming.py  outcome_store.py  output_parser.py  pipeline.py  project_writer.py  protocol.py  protocol_spec.py  (+12 more)
docs/: AGENTS.md  API.md  ARCHITECTURE.md  BLUEPRINTS_SSOT.md  CONTEXT.md  DEPLOYMENT.md  MOTHERLABS_FOUNDER_SSOT.md  MOTHERLABS_PRODUCT_DOCTRINE.md  README.md  SSOT.md  WORKBENCH_IA.md
frontend/: .gitignore  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
kernel/: __init__.py  _text_utils.py  agents.py  cell.py  closed_loop.py  content_validator.py  dispatch.py  emission.py  endpoint_extractor.py  grid.py  ground_truth.py  llm_bridge.py  memory.py  nav.py  navigator.py  observer.py  ops.py  perception_bridge.py  provenance_signing.py  store.py  training.py  world_grid.py
messaging/: __init__.py  bridge.py  cli.py  discord_bridge.py  telegram_bridge.py  whatsapp_bridge.py
mother/: BUILD_JOURNAL.md  __init__.py  actuator_receipt.py  app.py  appendage.py  appendage_builder.py  appendage_runtime.py  attention.py  bluesky.py  brand_identity.py  bridge.py  budget_monitor.py  build_ops.py  business_cognition.py  (+93 more)
(+487 files in other folders)
